src/objects/DiaLogConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Additional_Information_API_Field__c</fullName>
        <description>API Field Name for Additional Information</description>
        <label>Additional Information API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Email_Addresses__c</fullName>
        <description>Email Addresses where the debug emails are sent to.</description>
        <label>Admin Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <description>If checked, the Email notification is enabled.</description>
        <label>Email Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number_API_Field__c</fullName>
        <description>API Field Name for Line number Information</description>
        <label>Line Number API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Object_Name__c</fullName>
        <description>Name of the sObject where the log records were created.</description>
        <label>Log Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_API_Field__c</fullName>
        <description>API Field Name for Message Information</description>
        <label>Message API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity_API_Field__c</fullName>
        <description>Severity API Field</description>
        <label>Severity API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace_API_Field__c</fullName>
        <description>API Field Name for Stack Trace Information</description>
        <label>Stack Trace API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Debug__c</fullName>
        <label>System Debug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_API_Field__c</fullName>
        <description>API Field Name for Type Information</description>
        <label>Type API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Logging__c</fullName>
        <description>If checked, the sObject logging is enabled.</description>
        <label>sObject Logging</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DIA Log Configuration</label>
</CustomObject>